# django-girls-app

./: .gitignore  README.md  pyproject.toml
blog/migrations/: 0001_initial.py
lorelai/: settings.py  urls.py
